--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "q": "~1.4.1",
     "request": "~2.55.0",
     "seedrandom": "~2.4.0",
-    "should": "~6.0.3"
+    "should": "~6.0.3",
+    "stringify-object": "~2.0.0"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
